--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou a maria_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou uma estudante do ensino medio do Colegio Felisberto Nunes Gonsalves. Aprendo sobre matematica 2 usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
-        <p>Minhas habilidades</p>
+        <p class="lead">Eu sou a ludimila_</p>
+        <h1>Eu sou cantora e compositora</h1>
+        <p>Sou uma cantora e compositora brasileira, nascida em 24 de abril de 1995, na cidade de Duque de Caxias, 
+            no Rio de Janeiro. Recebeu o nome de registro de 
+            Ludmilla Oliveira da Silva. Fiquei conhecida aos postar vídeo da música Fala Mal de Mim, no YouTube, 
+            quando tinha 17 anos.</p>
+        <p>Gêneros musicais</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">Pop</p>
+            <p class="badge bg-secondary">Axe</p>
+            <p class="badge bg-secondary">Funk brasileiro</p>
+            <p class="badge bg-secondary">Samba e pagode</p>
         </div>
     </header>
     <main class="container mt-5">
