--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/perfil lud.jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou a ludimila_</p>
         <h1>Eu sou cantora e compositora</h1>
