--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/perfil lud.jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou a ludimila_</p>
-        <h1>Eu sou cantora e compositora</h1>
+        <h1>ludimila</h1>
         <p>Sou uma cantora e compositora brasileira, nascida em 24 de abril de 1995, na cidade de Duque de Caxias, 
             no Rio de Janeiro. Recebeu o nome de registro de 
             Ludmilla Oliveira da Silva. Fiquei conhecida aos postar vídeo da música Fala Mal de Mim, no YouTube, 
