--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="container text-center">
         <img src="img/perfil lud.jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou a ludimila_</p>
+        <p class="lead">Eu sou cantora e compositora_</p>
         <h1>ludimila</h1>
         <p>Sou uma cantora e compositora brasileira, nascida em 24 de abril de 1995, na cidade de Duque de Caxias, 
             no Rio de Janeiro. Recebeu o nome de registro de 
