--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Meu portfólio</title>
-</head>
+</head>Em 2012, lançou o single "Fala Mal de Mim" sob o nome artístico MC Beyoncé, em homenagem à cantora norte-americana de mesmo nome, de quem é grande admiradora. O videoclipe da música tornou-se um grande sucesso, obtendo 15 milhões de visualizações online em um curto espaço de tempo.
 
 <body>
     <header class="container text-center">
@@ -32,12 +32,14 @@
         <h2>Meus projetos</h2>
         <div class="row">
             <!-- Projeto 1 -->
-            <div class="col-md-4">
+            <div class="col-md-4">Em 2012, lançou o single "Fala Mal de Mim" sob o nome artístico MC Beyoncé, em homenagem à cantora norte-americana de mesmo nome, de quem é grande admiradora. O videoclipe da música tornou-se um grande sucesso, obtendo 15 milhões de visualizações online em um curto espaço de tempo.
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Minha musicas:Fala mal de mim</h5>
                         <p class="card-text">Esta musica,foi a minha primeira de sucesso durnte minha carreira musical.
+                            Em 2012, lançou o single "Fala Mal de Mim" sob o nome artístico MC Beyoncé, em homenagem à cantora norte-americana de mesmo nome, de quem é grande admiradora. 
+                            O videoclipe da música tornou-se um grande sucesso, obtendo 15 milhões de visualizações online em um curto espaço de tempo.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -56,10 +58,10 @@
                             pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
                             futuro da IA.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
-                            o projeto</button>
+                            o projeto</button>Em 2012, lançou o single "Fala Mal de Mim" sob o nome artístico MC Beyoncé, em homenagem à cantora norte-americana de mesmo nome, de quem é grande admiradora. O videoclipe da música tornou-se um grande sucesso, obtendo 15 milhões de visualizações online em um curto espaço de tempo.
                     </div>
                 </div>
-            </div>
+            </div>Em 2012, lançou o single "Fala Mal de Mim" sob o nome artístico MC Beyoncé, em homenagem à cantora norte-americana de mesmo nome, de quem é grande admiradora. O videoclipe da música tornou-se um grande sucesso, obtendo 15 milhões de visualizações online em um curto espaço de tempo.
 
             <!-- Projeto 3 -->
             <div class="col-md-4">
