--- a/index.html
+++ b/index.html
@@ -51,12 +51,9 @@
                 <div class="card">
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
-                            Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <h5 class="card-title">Significado da musica:Fala mal de mim
+                        <p class="card-text">A artista utiliza a música para expressar sua indiferença e força diante das fofocas e das atitudes negativas de outras pessoas, 
+                            que tentam diminuir seu valor através de comentários maldosos sobre sua aparência e comportamento..</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>Em 2012, lançou o single "Fala Mal de Mim" sob o nome artístico MC Beyoncé, em homenagem à cantora norte-americana de mesmo nome, de quem é grande admiradora. O videoclipe da música tornou-se um grande sucesso, obtendo 15 milhões de visualizações online em um curto espaço de tempo.
                     </div>
@@ -68,11 +65,10 @@
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        <h5 class="card-title"> Minhas musicas:Cheguei
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">Foi lançada em 17 de março de 2017 em todas as rádios do Brasil e lojas virtuais, além de estar no seu segundo álbum de estúdio A Danada Sou Eu.
+                            O videoclipe foi lançado em 3 de maio de 2017 no site Youtube.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
@@ -87,8 +83,9 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="modal-title">Significado da musica:Cheguei</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>A música 'Cheguei' de Ludmilla é um hino de autoafirmação e empoderamento. Com uma batida envolvente típica do funk brasileiro, 
+                    a letra transmite uma mensagem de confiança e atitude, onde a cantora declara sua chegada de forma triunfal, sem se importar com as opiniões alheias.
                 </div>
                 <div class="modal-body">
                     <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
