--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">Em 2012, lançou o single "Fala Mal de Mim" sob o nome artístico MC Beyoncé, em homenagem à cantora norte-americana de mesmo nome, de quem é grande admiradora. O videoclipe da música tornou-se um grande sucesso, obtendo 15 milhões de visualizações online em um curto espaço de tempo.
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/1.webp" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Minha musicas:Fala mal de mim</h5>
                         <p class="card-text">Esta musica,foi a minha primeira de sucesso durnte minha carreira musical.
@@ -63,7 +63,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/2.webp" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title"> Minhas musicas:Cheguei
                         </h5>
