--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Meu portfólio</title>
-</head>Em 2012, lançou o single "Fala Mal de Mim" sob o nome artístico MC Beyoncé, em homenagem à cantora norte-americana de mesmo nome, de quem é grande admiradora. O videoclipe da música tornou-se um grande sucesso, obtendo 15 milhões de visualizações online em um curto espaço de tempo.
-
+</head>
 <body>
     <header class="container text-center">
         <img src="img/perfil lud.jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
